--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 #app {
+  background-color: black;
   font-size: 5em;
   text-align: center;
   height: 100vh;
@@ -10,9 +11,9 @@
   grid-template-columns: 20% 60% 20%;
   grid-template-rows: 20% 60% 20%;
   grid-template-areas:
-    "hdr hdr hdr"
-    "nav art ads"
-    "ftr ftr ftr"
+  "hdr hdr hdr"
+  "nav art ads"
+  "ftr ftr ftr"
   ;
 }
 
@@ -39,4 +40,41 @@
 #footer {
   grid-area: ftr;
   background-color: #f08a4b;
+}
+
+/*tablet*/
+@media (min-width: 701px) and (max-width: 1100px) {
+  #app {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 30% 10% 40% 20%;
+    grid-template-areas:
+      "hdr hdr"
+      "nav nav"
+      "art ads"
+      "ftr ftr"
+      ;
+    font-size: 3em;
+    text-align: center;  
+    }
+}
+
+/*mobile*/
+@media (max-width: 700px) {
+  #app {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 100%;
+    grid-template-rows: 25% 10% 30% 15% 20%;
+    grid-template-areas:
+      "hdr"
+      "nav"
+      "art"
+      "ads"
+      "ftr"
+      ;
+    font-size: 3em;
+    text-align: center;  
+  }
 }
